

[COLOR grey][Date: 2013.08.16][/COLOR][COLOR black][Post: 4][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.3

[COLOR grey][Date: 2013.08.16][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.2

[COLOR grey][Date: 2013.08.15][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Show/Hide TV Episodes with 0 Links.

[COLOR grey][Date: 2013.08.15][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Fixes to Next-Page in listItems()
### Added missing section variable to Next Page Links in listItems().
### ### /\ This makes it so that TV listings will stay under TV 
### ### section when going to the next page.
### Fixed Next-Page links to not show when on the last page.

[COLOR grey][Date: 2013.08.11][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.2

[COLOR grey][Date: 2013.08.11][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.1

[COLOR grey][Date: 2013.08.09][/COLOR][COLOR black][Post: 4][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.1

[COLOR grey][Date: 2013.08.09][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.0

[COLOR grey][Date: 2013.08.09][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Wiki Pages
### https://github.com/HIGHWAY99/plugin.video.solarmovie.so/wiki

[COLOR grey][Date: 2013.08.09][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  A new Users Section!
### It's so early in the morning yet, but I'm still going at it 
### hard, finding more features to add.  Thus, attempting to claim 
### my rightful spot among the fore-runners of xbmc video plugins 
### and their authors.
### It has been my purpose to use this, as well as my other plugins, 
### as a learning experience.  Although, I can't help but admit that 